jenkins/jenkins-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: jenkins
  labels:
    name: jenkins
    environment: development
  annotations:
    owner: team-1
    managed-by: gitops
