jenkins/jenkins-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deploy
  namespace: jenkins
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins-sa
      nodeName: node1
      containers:
      - name: jenkins
        image: yerimy/jenkins:lts-kube
        ports:
          - containerPort: 8080
        securityContext:
          runAsUser: 0
        volumeMounts:
        - name: jenkins-volume
          mountPath: /var/jenkins_home
        # [추가] 컨테이너 안에 호스트 도커 소켓 경로 연결
        - name: docker-sock
          mountPath: /var/run/docker.sock
      volumes:
      - name: jenkins-volume
        hostPath:
          path: /data/jenkins
          type: DirectoryOrCreate
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
          type: Socket
